COPY文のインライン展開を加え、ルールと対訳の細部を直す
engine-api に CopyInlineExpansion・ExpandedCopyLine を置き、cobol-frontend が
COPY 文ごとに REPLACING 適用後の行を組み立てる。原本へコピー句を差し込んだ姿を
GUI のソースビューアへ渡すために使い、cli・persistence が受け渡しを担う。
FILE STATUS の IS を省いた記法を検査対象として拾えるようにし、対訳のリテラル
変換とレコード項目の扱いを直す。併せて、ルール・パーサ・samples のコメントへ
判定の理由と前提を書き足す。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>